--- a/config.ini
+++ b/config.ini
@@ -19,10 +19,6 @@ ruleset=Ⓜ️ OneDrive,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script
 ruleset=Ⓜ️ 微软服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Microsoft/Microsoft.list
 ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Apple/Apple.list
 ruleset=📲 电报信息,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Telegram/Telegram.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
@@ -30,7 +26,10 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/GlobalMedia/GlobalMedia.list
+ruleset=🎮 Epic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 Sony,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 Steam,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮 Nintendo,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🎮 游戏服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Game/Game.list
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/PrivateTracker/PrivateTracker.list
 ruleset=🚀 节点选择,https://cdn.jsdelivr.net/gh/LM-Firefly/Rules@master/PROXY.list
@@ -48,12 +47,21 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 SpeedTest`select`[]DIRECT`.*
+custom_proxy_group=🌍 国内媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=💰 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`.*
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`.*
+custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`.*
+custom_proxy_group=📺 哔哩哔哩`select`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ OneDrive`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Epic`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Sony`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Nintendo`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🎮 游戏服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🇯🇵 霓虹服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
