--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ ruleset=🚀 SpeedTest,https://cdn.jsdelivr.net/gh/LM-Firefly/Rules@master/Speed
 ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ZhihuAds/ZhihuAds.list
 ruleset=🆎 AdBlock,https://limbopro.com/Adblock4limbo.list
 ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/privacy-protection-tools/anti-AD@master/anti-ad-surge.txt
+ruleset=😂 我的服务器,https://raw.githubusercontent.com/ZhanXPX/clash-config/main/vps.list
 ruleset=🇯🇵 霓虹服务,https://raw.githubusercontent.com/ZhanXPX/clash-config/main/jp.list
 ruleset=Ⓜ️ OneDrive,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/OneDrive/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Microsoft/Microsoft.list
@@ -47,6 +48,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 SpeedTest`select`[]DIRECT`.*
+custom_proxy_group=😂 我的服务器`select`[]🚀 节点选择`.*
 custom_proxy_group=🌍 国内媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=💰 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`.*
