--- a/config.ini
+++ b/config.ini
@@ -47,14 +47,14 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 SpeedTest`select`[]DIRECT`.*
-custom_proxy_group=🌏 国内媒体`select`[]🚀 节点选择``.*
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择``.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=💰 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`.*
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`.*
 custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`.*
-custom_proxy_group=📺 哔哩哔哩`select`[]🚀 节点选择`.*
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ OneDrive`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
@@ -63,7 +63,7 @@ custom_proxy_group=🎮 Sony`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🎮 Nintendo`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🎮 游戏服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🇯🇵 霓虹服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🇯🇵 霓虹服务`select`[]🚀 节点选择`.*
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`.*
