--- a/config.ini
+++ b/config.ini
@@ -15,19 +15,19 @@ ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@ma
 ruleset=🆎 AdBlock,https://limbopro.com/Adblock4limbo.list
 ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/privacy-protection-tools/anti-AD@master/anti-ad-surge.txt
 ruleset=🇯🇵 霓虹服务,https://raw.githubusercontent.com/ZhanXPX/clash-config/main/jp.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleEarth.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleEarth.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=Ⓜ️ OneDrive,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/OneDrive/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Microsoft/Microsoft.list
 ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Apple/Apple.list
 ruleset=📲 电报信息,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Telegram/Telegram.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTubeMusic.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTubeMusic.list
 ruleset=🎥 奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🇨🇳 台湾分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
+ruleset=🇨🇳 谷歌分流,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
@@ -53,7 +53,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 SpeedTest`select`[]DIRECT`.*
-custom_proxy_group=🇨🇳 台湾分流`select`[]🎯 全球直连`[]🚀 节点选择``.*
+custom_proxy_group=🇨🇳 谷歌分流`select`[]🎯 全球直连`[]🚀 节点选择``.*
 custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择``.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=💰 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`.*
