--- a/config.ini
+++ b/config.ini
@@ -63,11 +63,11 @@ custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 节点选
 custom_proxy_group=Ⓜ️ OneDrive`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🎮 Epic`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🎮 Sony`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🎮 Nintendo`select`[]🎯 全球直连`[]🚀 节点选择`.*
-custom_proxy_group=🎮 游戏服务`select`[]🎯 全球直连`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Epic`select`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Sony`select`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Steam`select`[]🚀 节点选择`.*
+custom_proxy_group=🎮 Nintendo`select`[]🚀 节点选择`.*
+custom_proxy_group=🎮 游戏服务`select`[]🚀 节点选择`.*
 custom_proxy_group=🇯🇵 霓虹服务`select`[]🚀 节点选择`.*
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
