--- a/config.ini
+++ b/config.ini
@@ -53,8 +53,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 SpeedTest`select`[]DIRECT`.*
-custom_proxy_group=🇨🇳 谷歌分流`select`[]🎯 全球直连`[]🚀 节点选择``.*
-custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择``.*
+custom_proxy_group=🇨🇳 谷歌分流`select`[]🚀 节点选择`.*
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择``.*
 custom_proxy_group=💰 PayPal`select`[]🎯 全球直连`[]🚀 节点选择`.*
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`.*
