--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [custom]
-;s1oz自用版
+;小贝同学自用
 
 
-;设置规则标志位
+;设置规则
 
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Lan/Lan.list
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/Direct/Direct.list
@@ -49,9 +49,9 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
-;设置规则标志位
+;设置规则
 
-;设置分组标志位
+;设置分组
 custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🚀 SpeedTest`select`[]DIRECT`.*
 custom_proxy_group=🇨🇳 谷歌分流`select`[]🚀 节点选择`.*
@@ -74,7 +74,7 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,150
-;设置分组标志位
+;设置分组
 
 enable_rule_generator=true
 overwrite_original_rules=true
