--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/s1oz/unraid/master/customize.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NTPService/NTPService.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
-ruleset=💰 PayPal,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/PayPal/PayPal.list
+ruleset=💰 PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.list
 ruleset=🚀 SpeedTest,https://cdn.jsdelivr.net/gh/LM-Firefly/Rules@master/SpeedTest.list
 ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ZhihuAds/ZhihuAds.list
 ruleset=🆎 AdBlock,https://limbopro.com/Adblock4limbo.list
