--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/s1oz/unraid/master/c
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NTPService/NTPService.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.list
 ruleset=💰 PayPal,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PayPal/PayPal.list
-ruleset=🚀 SpeedTest,https://cdn.jsdelivr.net/gh/LM-Firefly/Rules@master/SpeedTest.list
+ruleset=🚀 SpeedTest,https://raw.githubusercontent.com/LM-Firefly/Rules/master/SpeedTest.list
 ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Surge/ZhihuAds/ZhihuAds.list
 ruleset=🆎 AdBlock,https://limbopro.com/Adblock4limbo.list
 ruleset=🆎 AdBlock,https://cdn.jsdelivr.net/gh/privacy-protection-tools/anti-AD@master/anti-ad-surge.txt
